[package]
name = "p2p"
version = "0.1.0"
edition = "2021"
#TODO Add keys
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#TODO Filter deps down using feature flags
tokio = { version = "1.21.2", features = ["full"] }
libp2p = "0.41.0"
serde = { version = "1.0.131", features = ["derive"] }
bincode = "1.3.3"

log = "0.4.14"
pretty_env_logger = "0.4"

futures = "0.3.18"
message-box = { path = "../common/message-box" }
dalek-ff-group = { path = "../crypto/dalek-ff-group" }
hex = "0.4"
group = "0.12"
zeroize = { version = "1.5", features = ["zeroize_derive"] }
zalloc = { path = "../common/zalloc" }
rdkafka = "0.28.0"
bs58 = "0.4.0"
config = "0.13.1"
clap = "2.18.0"